@@ -30,6 +30,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4942: Fix mvn-install ant target (petersla via daijy)
+
 PIG-4949: Fix registering jar in S3 which was broken by PIG-4417 in Pig 0.16 (yangyishan0901m via daijy)
 
 PIG-4950: Fix minor issues with running scripts in non-local FileSystems (petersla via daijy)
